<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_degrade">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="#CCFFFFFF"
        android:elevation="8dp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/logo_lume"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/logo_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#4A90E2"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- NOME -->
        <EditText
            android:id="@+id/edt_nome_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_usuario"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColor="#4A90E2"
            android:textColorHint="#4A90E2"
            android:backgroundTint="#4A90E2"/>

        <!-- EMAIL -->
        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColor="#4A90E2"
            android:textColorHint="#4A90E2"
            android:backgroundTint="#4A90E2"/>

        <!-- SENHA -->
        <EditText
            android:id="@+id/edt_senha_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColor="#4A90E2"
            android:textColorHint="#4A90E2"
            android:backgroundTint="#4A90E2"/>

        <!-- CONFIRMAR SENHA -->
        <EditText
            android:id="@+id/edt_confirmar_senha_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_senha"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColor="#4A90E2"
            android:textColorHint="#4A90E2"
            android:backgroundTint="#4A90E2"/>

        <!-- BOTÃO CADASTRAR -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criar_conta"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A8E6A3"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/txt_ir_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_login"
            android:textColor="#4A90E2"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>